--- a/restaurant_2.html
+++ b/restaurant_2.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="​​行行「吃」狀元, ​宋朝中餐廳">
+    <meta name="keywords" content="​​行行「吃」狀元, ​湘八老">
     <meta name="description" content="">
     <title>Page 6</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -81,17 +81,24 @@
       </form><h3 class="u-align-center u-text u-text-custom-color-2 u-text-2"> 業績不能拿冠軍  吃飯至少要第一</h3></header>
     <section class="u-clearfix u-section-1" id="sec-7524">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <a href="" class="u-border-2 u-border-active-white u-border-hover-white u-border-white u-btn u-btn-round u-button-style u-none u-radius u-text-palette-2-base u-btn-1">
-          <span class="u-icon u-text-palette-2-base u-icon-1">
-            <svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268 c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514 c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482 s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514 C512,93.417,453.532,30,376,30z"></path></svg>
-          </span>
-        </a>
-        <h2 class="u-text u-text-custom-color-2 u-text-default u-text-1"> 宋朝中餐廳</h2>
-        <p class="u-text u-text-custom-color-2 u-text-default u-text-2"> 電話：02-2704-1394</p>
-        <p class="u-text u-text-custom-color-2 u-text-default u-text-3"> 地址：106台北市大安區和平東路二段107巷23弄17號</p>
-        <p class="u-text u-text-custom-color-2 u-text-default u-text-4"> 營業時間：<br>星期六 11:30–14:30, 17:00–22:00<br>星期日 11:30–14:30, 17:00–22:00<br>星期一 11:30–14:30, 17:00–22:00<br>星期二 11:30–14:30, 17:00–22:00<br>星期三 11:30–14:30, 17:00–22:00<br>星期四 11:30–14:30, 17:00–22:00<br>星期五 11:30–14:30, 17:00–22:00
+          <a id="dynamic-button"
+             href="#"
+             data-restaurant-id="2"
+             class="u-border-2 u-border-active-white u-border-hover-white u-border-white u-btn u-btn-round u-button-style u-none u-radius u-text-palette-2-base u-btn-1"
+             onclick="likeRestaurant(2)">
+  <span class="u-icon u-text-palette-2-base u-icon-1">
+    <svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;">
+      <path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268 c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514 c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482 s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514 C512,93.417,453.532,30,376,30z"></path>
+    </svg>
+  </span>
+              <span id="button-number"></span>
+          </a>
+        <h2 class="u-text u-text-custom-color-2 u-text-default u-text-1"> 湘八老</h2>
+        <p class="u-text u-text-custom-color-2 u-text-default u-text-2"> 電話：02-2709-7979</p>
+        <p class="u-text u-text-custom-color-2 u-text-default u-text-3"> 地址：106台北市大安區安和路二段74巷8號</p>
+        <p class="u-text u-text-custom-color-2 u-text-default u-text-4"> 營業時間：<br>星期六 11:30–14:00, 17:30–21:00<br>星期日 11:30–14:00, 17:30–21:00<br>星期一 11:30–14:00, 17:30–21:00<br>星期二 休息<br>星期三 11:30–14:00, 17:30–21:00<br>星期四 11:30–14:00, 17:30–21:00<br>星期五 11:30–14:00, 17:30–21:00
         </p>
-        <p class="u-text u-text-custom-color-2 u-text-default u-text-5"> 標籤：＃滷肉飯 #文青風 ＃社交good ＃聚餐 ＃中式</p>
+        <p class="u-text u-text-custom-color-2 u-text-default u-text-5"> 標籤：#湘菜料理 #富貴雙方 #聚餐 #中式 #東安子雞 #彭園集團 #白飯小偷</p>
         <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" id="carousel-7901" data-interval="5000" data-u-ride="carousel">
           <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
             <li data-u-target="#carousel-7901" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
@@ -100,20 +107,16 @@
           <div class="u-carousel-inner u-gallery-inner" role="listbox">
             <div class="u-active u-carousel-item u-effect-fade u-gallery-item u-carousel-item-1">
               <div class="u-back-slide" data-image-width="740" data-image-height="954">
-                <img class="u-back-image u-expanded" src="images/4bc88327-1d5b-913d-9fe5-acd646989b75.jpeg">
+                <img class="u-back-image u-expanded" src="images/drive-download-20241211T090053Z-001/湘八老.jpg">
               </div>
               <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-1">
-                <h3 class="u-gallery-heading">Sample Title</h3>
-                <p class="u-gallery-text">Sample Text</p>
               </div>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-2">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/90fc53c9.svg">
+                <img class="u-back-image u-expanded" src="images/201711101813_xiangbaloa_mobile3.jpg">
               </div>
               <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-2">
-                <h3 class="u-gallery-heading">Sample Title</h3>
-                <p class="u-gallery-text">Sample Text</p>
               </div>
             </div>
           </div>
@@ -146,17 +149,17 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-radius u-repeater-item u-shape-round u-list-item-1">
               <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-1">
-                <a href="" class="u-active-custom-color-2 u-btn u-btn-round u-button-style u-custom-color-1 u-custom-item u-radius u-text-active-custom-color-1 u-text-custom-color-2 u-btn-2"> 我要訂位</a>
+                <a href="https://inline.app/booking/-LuqUhMNVTJHkiNtnhLV:inline-live-1/-LuqUhl05byXV1JqMdcT?language=zh-tw" class="u-active-custom-color-2 u-btn u-btn-round u-button-style u-custom-color-1 u-custom-item u-radius u-text-active-custom-color-1 u-text-custom-color-2 u-btn-2"> 我要訂位</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-radius u-repeater-item u-shape-round u-list-item-2">
               <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-2">
-                <a href="" class="u-active-custom-color-2 u-btn u-btn-round u-button-style u-custom-color-1 u-custom-item u-radius u-text-active-custom-color-1 u-text-custom-color-2 u-btn-3"> 餐廳網站</a>
+                <a href="https://www.pengyuan.com.tw/branch/menu/xiangbalao#38" class="u-active-custom-color-2 u-btn u-btn-round u-button-style u-custom-color-1 u-custom-item u-radius u-text-active-custom-color-1 u-text-custom-color-2 u-btn-3"> 餐廳網站</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-radius u-repeater-item u-shape-round u-list-item-3">
               <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
-                <a href="" class="u-active-custom-color-2 u-btn u-btn-round u-button-style u-custom-color-1 u-custom-item u-radius u-text-active-custom-color-1 u-text-custom-color-2 u-btn-4"> Google</a>
+                <a href="https://g.co/kgs/Df5rhM5" class="u-active-custom-color-2 u-btn u-btn-round u-button-style u-custom-color-1 u-custom-item u-radius u-text-active-custom-color-1 u-text-custom-color-2 u-btn-4"> Google</a>
               </div>
             </div>
           </div>
@@ -222,5 +225,58 @@ l-3.7-5.1L35.7,33.1h8.1l12.3,17.2l3.7,5.1l16.6,23.4h-7.8L55.3,60.2z"></path></sv
         </div>
         <p class="u-align-center u-text u-text-3"> 本網站支援Edge、google chrome、Firefox與safari瀏覽器     最佳解析度：1920*1080</p>
       </div></footer>
+  <script type="text/javascript">
+      // Function to fetch the like number for a specific restaurant
+      function fetchAndUpdateNumber(restaurantId) {
+          fetch(`http://localhost:3000/getNumber?restaurantId=${restaurantId}`) // Send the restaurantId as a query parameter
+              .then(response => response.json())
+              .then(data => {
+                  document.getElementById('button-number').textContent = data.number; // Update the number
+              })
+              .catch(error => console.error('Error fetching the number:', error));
+      }
+
+      // Add click event listener to the button
+      document.getElementById('dynamic-button').addEventListener('click', (event) => {
+          event.preventDefault(); // Prevent default behavior
+          const restaurantId = event.currentTarget.getAttribute('data-restaurant-id'); // Get the restaurant ID
+          fetchAndUpdateNumber(restaurantId); // Fetch and update the number for the given restaurant
+      });
+
+      // Function to like a restaurant
+      async function likeRestaurant(restaurantId) {
+          if (!restaurantId) {
+              console.error("Restaurant ID is required.");
+              return;
+          }
+
+          try {
+              // Send a POST request to the backend API
+              const response = await fetch('http://localhost:3000/restaurants/like', {
+                  method: 'POST',
+                  headers: {
+                      'Content-Type': 'application/json',
+                  },
+                  body: JSON.stringify({ id: restaurantId }),
+              });
+
+              if (response.ok) {
+                  const result = await response.json();
+                  console.log('Restaurant liked successfully:', result);
+              } else {
+                  const errorMessage = await response.text();
+                  console.error('Error liking restaurant:', errorMessage);
+              }
+          } catch (error) {
+              console.error('An error occurred while liking the restaurant:', error);
+          }
+      }
+
+
+      // Initial fetch to load the number when the page loads
+      const initialRestaurantId = document.getElementById('dynamic-button').getAttribute('data-restaurant-id');
+      fetchAndUpdateNumber(initialRestaurantId);
+
+  </script>
   
 </body></html>
