--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -177,31 +177,31 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <div class="u-layout-row">
                       <div class="u-container-style u-layout-cell u-size-12 u-size-20-md u-layout-cell-1">
                           <div class="u-container-layout u-valign-top u-container-layout-1">
-                              <img class="u-expanded-width u-image u-image-contain u-image-2" src="images/segment_1.png" data-image-width="675" data-image-height="695" onclick="">
+                              <img id="rate1" class="u-expanded-width u-image u-image-contain u-image-2" src="images/segment_1.png" data-image-width="675" data-image-height="695" onclick="rate1(1); fetchAndUpdate1(1)">
                               <p class="u-text u-text-default u-text-2" id="1"></p>
                           </div>
                       </div>
                       <div class="u-container-style u-layout-cell u-size-12 u-size-20-md u-layout-cell-2">
                           <div class="u-container-layout u-valign-top u-container-layout-2">
-                              <img class="u-expanded-width u-image u-image-contain u-image-default u-image-3" src="images/segment_2.png" alt="" data-image-width="729" data-image-height="823">
+                              <img id="rate2" class="u-expanded-width u-image u-image-contain u-image-default u-image-3" src="images/segment_2.png" alt="" data-image-width="729" data-image-height="823" onclick="rate2(1); fetchAndUpdate2(1)">
                               <p class="u-text u-text-default u-text-3" id="2"></p>
                           </div>
                       </div>
                       <div class="u-container-style u-layout-cell u-size-12 u-size-20-md u-layout-cell-3">
                           <div class="u-container-layout u-valign-top u-container-layout-3">
-                              <img class="u-expanded-width u-image u-image-contain u-image-default u-image-4" src="images/segment_3.png" alt="" data-image-width="735" data-image-height="812">
+                              <img id="rate3" class="u-expanded-width u-image u-image-contain u-image-default u-image-4" src="images/segment_3.png" alt="" data-image-width="735" data-image-height="812" onclick="rate3(1); fetchAndUpdate3(1)">
                               <p class="u-text u-text-default u-text-4" id="3"></p>
                           </div>
                       </div>
                       <div class="u-container-style u-layout-cell u-size-12 u-size-30-md u-layout-cell-4">
                           <div class="u-container-layout u-valign-top u-container-layout-4">
-                              <img class="u-expanded-width u-image u-image-contain u-image-default u-image-5" src="images/segment_4.png" alt="" data-image-width="749" data-image-height="836">
+                              <img id="rate4" class="u-expanded-width u-image u-image-contain u-image-default u-image-5" src="images/segment_4.png" alt="" data-image-width="749" data-image-height="836" onclick="rate4(1); fetchAndUpdate4(1)">
                               <p class="u-text u-text-default u-text-5" id="4"></p>
                           </div>
                       </div>
                       <div class="u-container-style u-layout-cell u-size-12 u-size-30-md u-layout-cell-5">
                           <div class="u-container-layout u-valign-top u-container-layout-5">
-                              <img class="u-expanded-width u-image u-image-contain u-image-default u-image-6" src="images/segment_5.png" alt="" data-image-width="762" data-image-height="843">
+                              <img id="rate5" class="u-expanded-width u-image u-image-contain u-image-default u-image-6" src="images/segment_5.png" alt="" data-image-width="762" data-image-height="843" onclick="rate5(1); fetchAndUpdate5(1)">
                               <p class="u-text u-text-default u-text-6" id="5"></p>
                           </div>
                       </div>
@@ -266,45 +266,70 @@ l-3.7-5.1L35.7,33.1h8.1l12.3,17.2l3.7,5.1l16.6,23.4h-7.8L55.3,60.2z"></path></sv
           fetch(`http://localhost:3000/get1?restaurantId=${restaurantId}`) // Send the restaurantId as a query parameter
               .then(response => response.json())
               .then(data => {
-                  document.getElementById('1').textContent = data.number; // Update the number
+                  document.getElementById("1").textContent = data.number; // Update the number
               })
               .catch(error => console.error('Error fetching the number:', error));
       }
       function fetchAndUpdate2(restaurantId) {
-          fetch(`http://localhost:3000/get1?restaurantId=${restaurantId}`) // Send the restaurantId as a query parameter
+          fetch(`http://localhost:3000/get2?restaurantId=${restaurantId}`) // Send the restaurantId as a query parameter
               .then(response => response.json())
               .then(data => {
-                  document.getElementById('2').textContent = data.number; // Update the number
+                  document.getElementById("2").textContent = data.number; // Update the number
               })
               .catch(error => console.error('Error fetching the number:', error));
       }
       function fetchAndUpdate3(restaurantId) {
-          fetch(`http://localhost:3000/get1?restaurantId=${restaurantId}`) // Send the restaurantId as a query parameter
+          fetch(`http://localhost:3000/get3?restaurantId=${restaurantId}`) // Send the restaurantId as a query parameter
               .then(response => response.json())
               .then(data => {
-                  document.getElementById('3').textContent = data.number; // Update the number
+                  document.getElementById("3").textContent = data.number; // Update the number
               })
               .catch(error => console.error('Error fetching the number:', error));
       }
       function fetchAndUpdate4(restaurantId) {
-          fetch(`http://localhost:3000/get1?restaurantId=${restaurantId}`) // Send the restaurantId as a query parameter
+          fetch(`http://localhost:3000/get4?restaurantId=${restaurantId}`) // Send the restaurantId as a query parameter
               .then(response => response.json())
               .then(data => {
-                  document.getElementById('4').textContent = data.number; // Update the number
+                  document.getElementById("4").textContent = data.number; // Update the number
               })
               .catch(error => console.error('Error fetching the number:', error));
       }
       function fetchAndUpdate5(restaurantId) {
-          fetch(`http://localhost:3000/get1?restaurantId=${restaurantId}`) // Send the restaurantId as a query parameter
+          fetch(`http://localhost:3000/get5?restaurantId=${restaurantId}`) // Send the restaurantId as a query parameter
               .then(response => response.json())
               .then(data => {
-                  document.getElementById('5').textContent = data.number; // Update the number
+                  document.getElementById("5").textContent = data.number; // Update the number
               })
               .catch(error => console.error('Error fetching the number:', error));
       }
 
       // Add click event listener to the button
       document.getElementById('dynamic-button').addEventListener('click', (event) => {
+          event.preventDefault(); // Prevent default behavior
+          const restaurantId = event.currentTarget.getAttribute('data-restaurant-id'); // Get the restaurant ID
+          fetchAndUpdateNumber(restaurantId); // Fetch and update the number for the given restaurant
+      });
+      document.getElementById('rate1').addEventListener('click', (event) => {
+          event.preventDefault(); // Prevent default behavior
+          const restaurantId = event.currentTarget.getAttribute('data-restaurant-id'); // Get the restaurant ID
+          fetchAndUpdateNumber(restaurantId); // Fetch and update the number for the given restaurant
+      });
+      document.getElementById('2').addEventListener('click', (event) => {
+          event.preventDefault(); // Prevent default behavior
+          const restaurantId = event.currentTarget.getAttribute('data-restaurant-id'); // Get the restaurant ID
+          fetchAndUpdateNumber(restaurantId); // Fetch and update the number for the given restaurant
+      });
+      document.getElementById('3').addEventListener('click', (event) => {
+          event.preventDefault(); // Prevent default behavior
+          const restaurantId = event.currentTarget.getAttribute('data-restaurant-id'); // Get the restaurant ID
+          fetchAndUpdateNumber(restaurantId); // Fetch and update the number for the given restaurant
+      });
+      document.getElementById('4').addEventListener('click', (event) => {
+          event.preventDefault(); // Prevent default behavior
+          const restaurantId = event.currentTarget.getAttribute('data-restaurant-id'); // Get the restaurant ID
+          fetchAndUpdateNumber(restaurantId); // Fetch and update the number for the given restaurant
+      });
+      document.getElementById('5').addEventListener('click', (event) => {
           event.preventDefault(); // Prevent default behavior
           const restaurantId = event.currentTarget.getAttribute('data-restaurant-id'); // Get the restaurant ID
           fetchAndUpdateNumber(restaurantId); // Fetch and update the number for the given restaurant
@@ -420,7 +445,7 @@ l-3.7-5.1L35.7,33.1h8.1l12.3,17.2l3.7,5.1l16.6,23.4h-7.8L55.3,60.2z"></path></sv
               console.error('An error occurred while liking the restaurant:', error);
           }
       }
-      async function rate44(restaurantId) {
+      async function rate4(restaurantId) {
           if (!restaurantId) {
               console.error("Restaurant ID is required.");
               return;
